syntax="proto3";

package proto.chat_queue_agent;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message QueueAgentBodyRequest {
    string queue_name = 1;
    string agent_id = 2;
    string source = 3;
}

message QueueAgentResponse {
    string code = 1;
    string message = 2;
    string id = 3;
}

service QueueAgentService {
    rpc InsertQueueAgent(QueueAgentBodyRequest) returns (QueueAgentResponse) {
        option (google.api.http) = {
            post : "/bss-chat/v1/queue-agent",
            body: "*"
        };
    }
}